--- a/.github/workflows/romeo.yml
+++ b/.github/workflows/romeo.yml
@@ -1,4 +1,4 @@
-name : Session Botto
+name : hacker
 
 
 on:
@@ -6,13 +6,14 @@ on:
       - cron: "0 */6 * * *"
     push:
       branches: [ main ]
+    workflow_dispatch:
 
-      
 env:
   API_ID: ${{secrets.API_ID}}
   API_HASH: ${{secrets.API_HASH}}
   BOT_TOKEN: ${{secrets.BOT_TOKEN}}
-  
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -33,7 +34,7 @@ jobs:
        - name: cloning repo and install
          continue-on-error: true
          run: |
-           git clone https://github.com/Tamilvip007/session-conv-bot.git bot && cd bot && pip3 install -r requirements.txt
+           git clone https://github.com/Romeo-RJ-143/session-conv-bot.git bot && cd bot && pip3 install -r requirements.txt
            pwd
        - name: Running
          timeout-minutes: 350
